update uts pemweb

--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
           </p>
           <div class="nav-menu-aside">
             <ul>
-              <li><a href="../pages/halaman_tabel.html">Rekomendasi</a></li>
+              <li><a href="/halaman_tabel.html">Rekomendasi</a></li>
               <li>
-                <a href="../pages/halaman_formulir.html">Masukan dan Saran</a>
+                <a href="/halaman_formulir.html">Masukan dan Saran</a>
               </li>
             </ul>
           </div>
