update uts pemweb

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <section class="featured-movies">
             <div class="title-featured">
               <h2>Film Terbaru</h2>
-              <a href="">Lihat Rekomendasi Lainnya</a>
+              <a href="/halaman_tabel.html">Lihat Rekomendasi Lainnya</a>
             </div>
             <div class="container">
               <div
